Add copy icon and behavior

--- a/components/key-management.html
+++ b/components/key-management.html
@@ -450,7 +450,8 @@
 
       <div id="mankey-key">
         <div>Funding Address:</div>
-        <div id="mankey-signing-address" onClick='copyText(this)'></div>
+        <div id="mankey-signing-address"></div>
+        <img src="../assets/images/content_copy-24px.svg" alt="" class="mankey-copy-address" onClick="copyAddress()">
       </div>
 
     </div>
